<resources>
    <string name="app_name">roofs</string>
    <string name="add_roof">add roof</string>
    <string name="list_foof">roof list</string>
    <string name="client_name">client name</string>
    <string name="address">address</string>
    <string name="skate_roof">skate roof</string>
    <string name="roof_slope">roof slope</string>
    <string name="add">add</string>
    <string name="clear">clear</string>
    <string name="empty_field">empty field</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="password">password</string>
</resources>